will have the debuffed health amount
Updated some code in the EntityList I use for my spawn eggs
Added the Silent Hellraiser, it'll have no preset enchantment tiers, it'll be a boss drop and challenge reward, it is stronger than epic weapons but has no doomsday

TODO still
Convert the rewards from the challenge items to use a weighed system instead of a completely random system, this should mean better rewards
Finish the other two forms of the Overlord
Add armor models for the higher tiered armors
Add the Overlord armor model
Create particles and add mob sounds
Add the new biome sets, these shouldn't take very much to do, just new blocks and a few worldgen things
Add new specific mobs for some of the more "special" biome sets, change some mobs to have variants for different biomes and such
Add the Achievements, which will flow in a set questline, also add side achievements for other random things

FOR THE OVERLORD
Finish up the Core's model, update entity class to use datawatchers for animations
The Combat Form will be worked on next, it'll work like the Stin in that it charges it's target relentlessly, but it'll also randomly pause and spawn in hunters
The Combat form will always generate Corrupted gas around itself, which will probably inflict corruption on mobs
The Combat form will inflict high horizontal knockback onto whatever it hits, it'll have no regeneration but will have high armor
When the Cocoon form has become aggitated, it'll spawn a bunch of Corrupted gas around it for a few seconds, it can only be hurt by melee hits, however,
melee hits inflict extra durability damage to the attacking entity's weapons, harvesters and nano swarms will constantly spawn around it
When each form is "defeated" it'll go through a transformation period which it then turns into it's next form
Create the Harvester and Hunter for it, these will basically be the underlings that attack you while you're fighting it to annoy you